[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/Pause Menu/Pause Menu.gd" type="Script" id=1]
[ext_resource path="res://GUI/Fade.tscn" type="PackedScene" id=2]

[node name="Pause Menu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.168627, 0.266667, 0.501961 )

[node name="ButtonsColider" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -287.0
margin_right = -211.0
margin_bottom = -194.0
rect_scale = Vector2( 6, 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsColider"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.0
margin_top = 7.5
margin_right = 43.0
margin_bottom = 91.5

[node name="ContinueButton" type="Button" parent="ButtonsColider/VBoxContainer" groups=["buttons"]]
margin_right = 86.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../MainMenuButton")
focus_neighbour_bottom = NodePath("../SaveButton")
text = "Continue"

[node name="SaveButton" type="Button" parent="ButtonsColider/VBoxContainer" groups=["buttons"]]
margin_top = 20.0
margin_right = 86.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../ContinueButton")
focus_neighbour_bottom = NodePath("../LoadSaveButton")
text = "Save"

[node name="LoadSaveButton" type="Button" parent="ButtonsColider/VBoxContainer" groups=["buttons"]]
margin_top = 40.0
margin_right = 86.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../SaveButton")
focus_neighbour_bottom = NodePath("../MainMenuButton")
focus_previous = NodePath("../SaveButton")
text = "Load Save"

[node name="MainMenuButton" type="Button" parent="ButtonsColider/VBoxContainer" groups=["buttons"]]
margin_top = 60.0
margin_right = 86.0
margin_bottom = 76.0
focus_neighbour_top = NodePath("../LoadSaveButton")
focus_neighbour_bottom = NodePath("../ContinueButton")
text = "Main Menu"

[node name="Question" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.168627, 0.266667, 0.501961 )

[node name="Panel" type="Panel" parent="Question"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -414.0
margin_top = -135.0
margin_right = -276.0
margin_bottom = -87.0
rect_scale = Vector2( 6, 6 )

[node name="Label" type="Label" parent="Question"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -96.0
margin_right = -134.0
margin_bottom = -62.0
rect_scale = Vector2( 6, 6 )
text = "Save data?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Question"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.0
margin_top = -10.0
margin_right = -480.0
margin_bottom = 10.0
rect_min_size = Vector2( 32, 0 )
rect_scale = Vector2( 6, 6 )
alignment = 1

[node name="YesMenuButton" type="Button" parent="Question/HBoxContainer" groups=["buttons"]]
margin_left = 58.0
margin_right = 90.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
focus_neighbour_top = NodePath(".")
focus_neighbour_bottom = NodePath("../CancelMenuButton")
focus_next = NodePath("../NoMenuButton")
focus_previous = NodePath("../CancelMenuButton")
text = "YES"

[node name="NoMenuButton" type="Button" parent="Question/HBoxContainer" groups=["buttons"]]
margin_left = 94.0
margin_right = 126.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
focus_neighbour_top = NodePath("../YesMenuButton")
focus_neighbour_bottom = NodePath("../CancelMenuButton")
focus_next = NodePath("../CancelMenuButton")
focus_previous = NodePath("../YesMenuButton")
text = "NO"

[node name="CancelMenuButton" type="Button" parent="Question/HBoxContainer" groups=["buttons"]]
margin_left = 130.0
margin_right = 182.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../YesMenuButton")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../YesMenuButton")
focus_previous = NodePath("../NoMenuButton")
text = "CANCEL"

[node name="UI" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="ButtonsColider/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ButtonsColider/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ButtonsColider/VBoxContainer/LoadSaveButton" to="." method="_on_LoadSave_pressed"]
[connection signal="pressed" from="ButtonsColider/VBoxContainer/MainMenuButton" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Question/HBoxContainer/YesMenuButton" to="." method="_on_YesMenuButton_pressed"]
[connection signal="pressed" from="Question/HBoxContainer/NoMenuButton" to="." method="_on_NoMenuButton_pressed"]
[connection signal="pressed" from="Question/HBoxContainer/CancelMenuButton" to="." method="_on_CancelMenuButton_pressed"]
[connection signal="FadeInFinished" from="UI" to="." method="_on_UI_FadeInFinished"]
